DP-12843: fix IE layout bug

--- a/assets/scss/03-organisms/_related-locations.scss
+++ b/assets/scss/03-organisms/_related-locations.scss
@@ -31,7 +31,7 @@
    
     @media ($bp-small-min) {
       display: flex;
-      justify-content: space-evenly;
+      justify-content: space-between;
     }
 
     @media ($bp-large-extended-min) {
